Demo: initial implementation of a simple demo page with pagination for next and previous news.

--- a/web/index.html
+++ b/web/index.html
@@ -5,14 +5,39 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Hello World!</title>
+    <title>News Maker</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.css" rel="stylesheet">
 </head>
 
 <body>
-    <div class="container">
-        {{bundle.title}} -- {{bundle.version}}
-    </div>
+    <section class="hero is-light">
+        <div class="hero-body">
+            <div class="container">
+                <h1 class="title">
+                    {{bundle.title}}
+                </h1>
+                <h3 class="subtitle">
+                    {{bundle.version}}
+                </h3>
+            </div>
+        </div>
+    </section>
+    <section class="section">
+        <div class="container">
+            <div class="field is-grouped">
+                <div class="control">
+                    <a href={{bundle.previousPost}} class="button is-primary">Previous</a>
+                </div>
+                <div class="control">
+                    <a href={{bundle.nextPost}} class="button is-primary">Next</a>
+                </div>
+
+            </div>
+            <div>
+                {{bundle.post}}
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
