demo: updated demo page to show news title + news text.

--- a/web/index.html
+++ b/web/index.html
@@ -31,10 +31,13 @@
                 <div class="control">
                     <a href={{bundle.nextPost}} class="button is-primary">Next</a>
                 </div>
-
             </div>
             <div>
-                {{bundle.post}}
+                <article class="message is-dark is-small">
+                    <div class="message-body">
+                        {{bundle.post}}
+                    </div>
+                </article>
             </div>
         </div>
     </section>
